# libinneall

./: .clang-format  .gitignore  README.md  meson-native-clang.ini  meson.build
assets/shaders/: lighting_phong.frag.glsl  skybox.frag.glsl  skybox.vert.glsl
assets/sword-sting/: sting-sword.mtl
demo/: main.cpp  meson.build
libinneal/: log.cpp  log.hpp  meson.build  window.cpp  window.hpp
libinneal/base/: assert.cpp  assert.hpp  result.cpp
libinneal/glad/src/: glad.c
libinneal/renderer/: gl_buffer.cpp  gl_buffer.hpp  mesh.cpp  mesh.hpp  model.hpp  renderer.cpp  renderer.hpp  scene.hpp  shader_program.cpp  shader_program.hpp  shader_stage.cpp  shader_stage.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp  vertex_data.cpp  vertex_data.hpp
libinneal/utility/: log.hpp  unique_resource.hpp
libinneall/: camera.cpp  camera.hpp  doctest.cpp  light.hpp  mesh_data.cpp  mesh_data.hpp  meson.build  vertex_data.cpp  vertex_data.hpp  window.cpp  window.hpp
libinneall/asset/: asset.cpp  asset.hpp  obj.cpp  obj.hpp  ppm.cpp  ppm.hpp
libinneall/base/: arena.cpp  arena.hpp  arena.test.cpp  array.hpp  array.test.cpp  array_dyn.hpp  array_dyn.test.cpp  assert.cpp  assert.hpp  buffer.hpp  byte.hpp  dyn_array.hpp  dyn_array.test.cpp  error.cpp  error.hpp  hash.cpp  hash.hpp  hash.test.cpp  hash_map.hpp  hash_map.test.cpp  log.cpp  log.hpp  option.hpp  result.cpp  result.hpp  span.hpp  string.cpp  string.hpp  string.test.cpp  string_utils.cpp  string_utils.hpp  string_utils.test.cpp  string_view.cpp  string_view.hpp  string_view.test.cpp  unique_handle.hpp  unique_ptr.hpp  unique_resource.hpp  utility.hpp
libinneall/glad/include/glad/: glad.h
libinneall/image/: ppm.cpp  ppm.hpp
libinneall/math/: math.cpp  math.hpp  matrix3.cpp  matrix3.hpp  matrix3.test.cpp  matrix4.cpp  matrix4.hpp  matrix4.test.cpp  transforms.cpp  transforms.hpp  transforms.test.cpp  vector2.cpp  vector2.hpp  vector2.test.cpp  vector3.cpp  vector3.hpp  vector3.test.cpp  vector4.cpp  vector4.hpp  vector4.test.cpp
libinneall/renderer/: color.hpp  cubemap.cpp  cubemap.hpp  debug_mesh.cpp  debug_mesh.hpp  gl_buffer.cpp  gl_buffer.hpp  light_source.hpp  material.hpp  mesh.cpp  mesh.hpp  model.hpp  renderer.cpp  renderer.hpp  scene.hpp  shader_program.cpp  shader_program.hpp  shader_stage.cpp  shader_stage.hpp  shader_uniform.cpp  shader_uniform.hpp  texture.cpp  texture.hpp  vertex_array.cpp  vertex_array.hpp  vertex_data.cpp  vertex_data.hpp
resources/: basic.frag.glsl  basic.vert.glsl
resources/shaders/: basic.vert.glsl  basic_lighting.frag.glsl  debug.frag.glsl  debug.vert.glsl  lighting_phong.frag.glsl  lighting_phong.vert.glsl
subprojects/: glad.wrap
subprojects/glad/: meson.build
subprojects/glad/src/: glad.c
